@@ -1,213 +1,0 @@
-begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
-begin_comment
-comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
-end_comment
-
-begin_package
-package|package
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|metastore
-package|;
-end_package
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|conf
-operator|.
-name|HiveConf
-import|;
-end_import
-
-begin_class
-specifier|public
-class|class
-name|TestRemoteHiveMetaStore
-extends|extends
-name|TestHiveMetaStore
-block|{
-specifier|private
-specifier|static
-specifier|final
-name|String
-name|METASTORE_PORT
-init|=
-literal|"29083"
-decl_stmt|;
-specifier|private
-specifier|static
-name|boolean
-name|isServerRunning
-init|=
-literal|false
-decl_stmt|;
-specifier|private
-specifier|static
-class|class
-name|RunMS
-implements|implements
-name|Runnable
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|run
-parameter_list|()
-block|{
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"Running metastore!"
-argument_list|)
-expr_stmt|;
-name|String
-index|[]
-name|args
-init|=
-operator|new
-name|String
-index|[
-literal|1
-index|]
-decl_stmt|;
-name|args
-index|[
-literal|0
-index|]
-operator|=
-name|METASTORE_PORT
-expr_stmt|;
-name|HiveMetaStore
-operator|.
-name|main
-argument_list|(
-name|args
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-annotation|@
-name|Override
-specifier|protected
-name|void
-name|setUp
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|super
-operator|.
-name|setUp
-argument_list|()
-expr_stmt|;
-if|if
-condition|(
-name|isServerRunning
-condition|)
-block|{
-return|return;
-block|}
-name|Thread
-name|t
-init|=
-operator|new
-name|Thread
-argument_list|(
-operator|new
-name|RunMS
-argument_list|()
-argument_list|)
-decl_stmt|;
-name|t
-operator|.
-name|start
-argument_list|()
-expr_stmt|;
-comment|// Wait a little bit for the metastore to start. Should probably have
-comment|// a better way of detecting if the metastore has started?
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|5000
-argument_list|)
-expr_stmt|;
-comment|// hive.metastore.local should be defined in HiveConf
-name|hiveConf
-operator|.
-name|set
-argument_list|(
-literal|"hive.metastore.local"
-argument_list|,
-literal|"false"
-argument_list|)
-expr_stmt|;
-name|hiveConf
-operator|.
-name|setVar
-argument_list|(
-name|HiveConf
-operator|.
-name|ConfVars
-operator|.
-name|METASTOREURIS
-argument_list|,
-literal|"thrift://localhost:"
-operator|+
-name|METASTORE_PORT
-argument_list|)
-expr_stmt|;
-name|hiveConf
-operator|.
-name|setIntVar
-argument_list|(
-name|HiveConf
-operator|.
-name|ConfVars
-operator|.
-name|METATORETHRIFTRETRIES
-argument_list|,
-literal|3
-argument_list|)
-expr_stmt|;
-name|client
-operator|=
-operator|new
-name|HiveMetaStoreClient
-argument_list|(
-name|hiveConf
-argument_list|)
-expr_stmt|;
-name|isThriftClient
-operator|=
-literal|true
-expr_stmt|;
-comment|// Now you have the client - run necessary tests.
-name|isServerRunning
-operator|=
-literal|true
-expr_stmt|;
-block|}
-block|}
-end_class
-
-end_unit
-
