@@ -6086,6 +6086,68 @@ name|getPath
 argument_list|()
 argument_list|)
 decl_stmt|;
+comment|// remove empty directory since DP insert should not generate empty partitions.
+comment|// empty directories could be generated by crashed Task/ScriptOperator
+if|if
+condition|(
+name|items
+operator|.
+name|length
+operator|==
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|fs
+operator|.
+name|delete
+argument_list|(
+name|parts
+index|[
+name|i
+index|]
+operator|.
+name|getPath
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Cannot delete empty directory "
+operator|+
+name|parts
+index|[
+name|i
+index|]
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Cannot delete empty directory "
+operator|+
+name|parts
+index|[
+name|i
+index|]
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+throw|;
+block|}
+block|}
 name|taskIDToFile
 operator|=
 name|removeTempOrDuplicateFiles
